--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,7 +216,6 @@ i:hover{
 .container-videos{
     width: 370px;
     height: 900px;
-    border: 1px solid black;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -226,7 +225,6 @@ i:hover{
 .container-video{
     width: 100%;
     height: 120px;
-    border: 1px solid black;
     padding: 1px;
     display: flex;
     gap: 1px;
@@ -238,6 +236,7 @@ i:hover{
     width: 50%;
     border: 1px solid black;
     margin: 5px;
+    border-radius: 5px;
 }
 
 .textos{
